apps/cxs-services/overlays/staging/database-migration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxsservices
spec:
  template:
    spec:
      containers:
      - name: node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxs-services-rag-worker
spec:
  template:
    spec:
      containers:
      - name: worker
