apps/cxs-services/overlays/staging/cxs-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxsservices
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: cxs.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: cxsservices
                port:
                  number: 8088
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cxs.contextsuite.com
      secretName: cxs-contextsuite-com-tls
